<resources>
    <string name="app_name">NodaWallet</string>
    <string name="loading">Loading…</string>
    <string name="server_error">server error</string>
    <string name="cannotreachserver">Cannot reach server try again..</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="imageupload">Uploading Image..</string>
    <string name="NODA_WALLET_BASE_URL">http://yourbaseurl/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="night_mode_prefs_key">Nightmode</string>
    <string name="main_wallet">Main wallet</string>
    <string name="multi_coin_wallet">Multi-coin wallet</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="touch_id">FingerPrint</string>
    <string name="push_notifications">Push notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="currency">Currency</string>
    <string name="browser">Browser</string>
    <string name="transactions">Transactions</string>
    <string name="wallet">Wallet</string>
    <string name="purchase">Purchase</string>
    <string name="scanner">Scanner</string>
    <string name="dex">DEX</string>
    <string name="settings">Settings</string>
    <string name="further">Further</string>
    <string name="exchange">Exchange  </string>
    <string name="stock_exchange">Stock exchange</string>
    <string name="send">Send</string>
    <string name="imports">Import</string>
    <string name="news">News</string>
    <string name="faq">FAQ</string>
    <string name="mainwallet">Main wallet</string>
    <string name="multicoin_wallet">Multi-coin wallet</string>
    <string name="name">Name</string>
    <string name="backup_option">BACKUP OPTIONS</string>
    <string name="show_secret_phrase">Show secret phrase</string>
    <string name="warning_message">If you lose access to this device, your funds will be lost if you do not backup!</string>
    <string name="export_key">Export Public Keys</string>
    <string name="open_key">OPEN KEY ACCOUNT</string>
    <string name="publickey_warning">Be careful with your public keysaccount (XPUB) when you give them to a third party,you let him see all the transaction information</string>
    <string name="another_eoshelka">Another eoshelka</string>
    <string name="address_title">Address of the recipient</string>
    <string name="embed">Embed</string>
    <string name="max">Max </string>
    <string name="btc">BTC</string>
    <string name="btc_amount">BTC amount</string>
    <string name="total">Total</string>
    <string name="tokens">Tokens</string>
    <string name="collections">Collections</string>
    <string name="search">Search</string>
    <string name="crypto_purchase">Crypto purchase</string>
    <string name="buy">Buy</string>
    <string name="you_send">You send</string>
    <string name="you_get">You get</string>
    <string name="fees">5% fees (minimal 10 USD) are included in the price</string>
    <string name="copy">Copy</string>
    <string name="amount">Amount</string>
    <string name="share">Share</string>
    <string name="scan">Scan</string>
    <string name="stockexchange">StockExchange</string>
    <string name="you_pay">You Pay</string>
    <string name="balance">Balance : </string>
    <string name="you_are_getting">You are Getting</string>
    <string name="language">Language</string>
    <string name="sell">Sell</string>
    <string name="open_orders">Open Orders</string>
    <string name="number">Number</string>
    <string name="all">All</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Okay</string>
    <string name="buy_crypto">Buy Crypto</string>
    <string name="collectibles">Investments</string>
    <string name="no_collections_found">No investments found.</string>
    <string name="private_and_secure">Private and Secure</string>
    <string name="private_keys_never_leave_your_device">Private keys never leave your device</string>
    <string name="create_new_wallet">Create new Wallet</string>
    <string name="import_existing_wallet">Import existing wallet</string>
    <string name="write_down_the_secret_phrase">Write down the secret phrase</string>
    <string name="write_or_copy_these_words_in_the_correct_order_and_save_them_in_safe_place">Write or copy these words in the correct order and save them in safe place.</string>
    <string name="never_pass_the_phrase_restoring_to_anyone_store_it_securely">Never pass the phrase restoring to anyone, store it securely!</string>
    <string name="verify_recovery_phrase">Verify recovery phrase</string>
    <string name="tap_the_words_to_put_them_next_to_each_other_in_the_correct_order">Tap the words to put them next to each other in the correct order</string>
    <string name="done">Done</string>
    <string name="code_verified">Your code verified</string>
    <string name="i_understand_that_if_i_lose_my_recovery_words_i_will_not_be_able_to_access_my_wallet">I understand that if i lose my recovery words, i will not be able to access my wallet.</string>
    <string name="continuee">Continue</string>
    <string name="paste">Paste</string>
    <string name="typically_12_sometimes_24_words_separated_by_single_spaces">Typically 12 (sometimes 24) words separated by single spaces</string>
    <string name="phrase">Phrase</string>
    <string name="network">Network</string>
    <string name="contact_address">Contract Address</string>
    <string name="symbol">Symbol</string>
    <string name="decimal">Decimal</string>
    <string name="add_custom_token">Add Custom Token</string>
    <string name="enter_code">Enter Code</string>
    <string name="code_is_required_for_entrance_to_noda_wallet">Code is required for Entrance to Noda Wallet</string>
    <string name="twitter">Twitter</string>
    <string name="telegram">Telegram</string>
    <string name="your_recovery_phrase">Your Recovery phrase</string>
    <string name="export_account_public_keys">Export Account Public Keys</string>
    <string name="receive">Receive</string>
    <string name="transaction_history">Transaction History</string>
    <string name="add_token">Add Token</string>
    <string name="custom_token">Custom Token</string>
    <string name="network_token">Network Token</string>
    <string name="refresh">Refresh</string>
    <string name="recipient_address">Recipient Address</string>
    <string name="fees_value">Fees : 0.00</string>
    <string name="amount_value">Amount : 0.00</string>
    <string name="set_amount">Set Amount</string>
    <string name="your_code_verified">Your code verified</string>
    <string name="internet_connection">Please check your internet connection and try again</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="loading_chart">Loading chart data…</string>
    <string name="market_price">Market Price</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="hash">Hash</string>
    <string name="value">Value</string>
    <string name="gas_price">Gas Price</string>
    <string name="nonce">Nonce</string>
    <string name="date">Date</string>
    <string name="min">Min </string>
    <string name="enter_amount_greater0">Enter amount greater than 0</string>
    <string name="insufficient_balance">Insufficient balance to make exchange</string>
    <string name="amount_match_min_max">Amount should match minimum and maximum amount</string>
    <string name="enter_amount_to_exchange">Enter amount to Exchange</string>
    <string name="exchange_processed">Exchange processed. Your transaction will be complete,once the network verify it</string>
    <string name="exchange_failed">Exchange failed.. try again later..</string>
    <string name="no_exchange_history">No Exchange History</string>
    <string name="pair">Pair</string>
    <string name="send_amount">Send Amount</string>
    <string name="receive_amount">Receive Amount</string>
    <string name="fee">Fee</string>
    <string name="txnhash">txnHash</string>
    <string name="address_empty">Address empty</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="name_above">Name should be above 3 characters</string>
    <string name="invalid_symbol">Invalid symbol</string>
    <string name="invalid_decimal">Invalid decimal</string>
    <string name="withdraw_request">Withdraw request Processed. Your transaction will be complete,once the network verify it</string>
    <string name="withdraw_failed">Withdraw request failed.. Try again later</string>
    <string name="insufficient_bal">insufficient Balance</string>
    <string name="confirm">Confirm</string>
    <string name="tokensent">token sent to your account</string>
    <string name="amountsent">sent to your account</string>
    <string name="tokenfailed">token sending failed.</string>
    <string name="amountfailed">sending failed.</string>
    <string name="exchange_amount">Exchange amount</string>
    <string name="exchange_sent">received to your account</string>
    <string name="address_copied">Address copied to clipboard</string>
    <string name="wallet_deleted">wallet deleted</string>
    <string name="wallet_name_validation">Wallet name must be above 3 characters</string>
    <string name="name_updated">Name updated</string>
    <string name="copy_address">Copy Address</string>
    <string name="fingerprint_disabled">Fingerprint disabled</string>
    <string name="notification_enabled">Notifications enabled</string>
    <string name="notification_disabled">Notifications disabled</string>
    <string name="wallets">Wallets</string>
    <string name="address">Address</string>
    <string name="empty_phrase">Empty Phrase</string>
    <string name="invalid_phrase">Invalid Phrase</string>
    <string name="empty_address">Empty address</string>
    <string name="empty_key">Empty key</string>
    <string name="invalid_key">Invalid key</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="confirmpin">Confirm Pin</string>
    <string name="pinmismatch">Pin Mismatch</string>
    <string name="pinwrong">Pin Wrong</string>
    <string name="fingerprint_notfound">Fingerprint Hardware not found you can set Passcode to unlock the app</string>
    <string name="no_transaction_found">No transactions found</string>
    <string name="select_currency">Select Currency</string>
    <string name="no_market_data">No Market data…</string>
    <string name="recepient_address">Recepient address</string>
    <string name="amount_in">"Amount in "</string>
    <string name="network_fee">Network Fee</string>
    <string name="max_total">Max Total</string>
    <string name="click_back_again">Please click BACK again to exit</string>
    <string name="position_your_code_in_the_frame">Position your code in the frame</string>
    <string name="enter_amount">Please enter Amount</string>
    <string name="amount_should_minimum">\"Amount should be minimum \"</string>
    <string name="and_maximum">and maximum</string>
    <string name="private_key">Private Key</string>
    <string name="use_passcode">Use Passcode</string>
    <string name="one_touch_sign_in">One Touch Sign In</string>
    <string name="place_your_fingertip_on_the_scanner_to_verify_your_identity">Place your fingertip on the scanner to verify your identity</string>
    <string name="fingerprint_sign_in_makes_your_app_login_much_faster_your_device_should_have_at_least_one_fingerprint_registered_in_your_device_settings">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in your device settings)</string>
    <string name="authenticate">Authenticate</string>
    <string name="import_multi_coin_wallet">Import Multi-Coin Wallet</string>
</resources>