<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="50dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/include"
    app:layout_constraintVertical_bias="0.94"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="@dimen/_5sdp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/edtSinglePhrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/phrase"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="@dimen/_5sdp"
            android:textSize="14sp"
            android:layout_toStartOf="@+id/textSinglePhrasePaste"

            app:layout_constraintTop_toTopOf="parent" />

        <com.application.nodawallet.utils.CustomTextViewSemiBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAllCaps="true"
            android:textColor="@color/bottomactive"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:id="@+id/textSinglePhrasePaste"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/paste" />
    </RelativeLayout>

    <View
        android:id="@+id/View5"
        android:layout_width="0dp"
        android:layout_height="0.1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:background="@color/copybackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
        app:layout_constraintVertical_bias="0.0" />
    <com.application.nodawallet.utils.CustomTextViewLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:textSize="12sp"
        android:layout_marginRight="24dp"
        android:id="@+id/textSeperate"
        android:layout_marginTop="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center"
        android:text="@string/typically_12_sometimes_24_words_separated_by_single_spaces" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSingleImport"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/bottomactive"
        android:text="@string/imports"
        android:textColor="@color/textcolor"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/textSeperate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
